bootstrap datetimepicker added

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/_ChangePassword.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/_ChangePassword.cshtml
@@ -17,28 +17,28 @@
 					@Html.HiddenFor(m => m.Email, new { id = "uEmail" })
 					<div class="col-md-12">
 						@Html.LabelFor(m => m.OldPassword, new { @class = "requiredA" })
-						@Html.TextBoxFor(m => m.OldPassword, new { @class = "form-control", @Name = "OldPassword" })
+						@Html.TextBoxFor(m => m.OldPassword, new { @class = "form-control", @Name = "OldPassword", @type = "password" })
 						@Html.ValidationMessageFor(m => m.OldPassword)
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-12">
 						@Html.LabelFor(m => m.NewPassword, new { @class = "requiredA" })
-						@Html.TextBoxFor(m => m.NewPassword, new { @class = "form-control", @Name = "NewPassword" })
+						@Html.TextBoxFor(m => m.NewPassword, new { @class = "form-control", @Name = "NewPassword", @type = "password" })
 						@Html.ValidationMessageFor(m => m.NewPassword)
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-12">
 						@Html.LabelFor(m => m.RetypePassword, new { @class = "requiredA" })
-						@Html.TextBoxFor(m => m.RetypePassword, new { @class = "form-control", @Name = "RetypePassword" })
+						@Html.TextBoxFor(m => m.RetypePassword, new { @class = "form-control", @Name = "RetypePassword", @type = "password" })
 						@Html.ValidationMessageFor(m => m.RetypePassword)
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-12">
-						<button class="btn btn-secondary float-left mr-3" id="btnCancel" type="button" data-dismiss="modal" name="prevBtn">Cancel <i class="material-icons">cancel</i></button>
-						<button class="btn btn-orange" id="btnsubmit" type="submit" data-target="#demo" data-toggle="collapse" name="nextBtn">Submit <i class="material-icons">check_circle</i></button>
+						<button class="btn btn-secondary float-left mr-3" id="btnCancelPassword" type="button" data-dismiss="modal" name="prevBtn">Cancel <i class="material-icons">cancel</i></button>
+						<button class="btn btn-orange" id="btnsubmitPassword" type="submit" data-target="#demo" data-toggle="collapse" name="nextBtn">Submit <i class="material-icons">check_circle</i></button>
 					</div>
 				</div>
 				}
