--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/_ChangeAddress.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/_ChangeAddress.cshtml
@@ -14,7 +14,7 @@
 				{
 					@Html.AntiForgeryToken()
 					<h5 class="modal-title">Change Address</h5>
-					@Html.HiddenFor(m => m.Email, new { id = "uEmail" })
+					@Html.HiddenFor(m => m.Email, new { id = "contactEmail" })
 						<div class="row">
 							<div class="col-md-6">
 								@Html.LabelFor(m => m.Address, new { @class = "requiredA" })
@@ -53,8 +53,8 @@
 						</div>
 						<div class="row">
 							<div class="col-md-12">
-								<button class="btn btn-secondary float-left mr-3" id="btnCancel" type="button" data-dismiss="modal" name="prevBtn">Cancel <i class="material-icons">cancel</i></button>
-								<button class="btn btn-orange" id="btnsubmit" type="submit" data-target="#demo" data-toggle="collapse" name="nextBtn">Submit <i class="material-icons">check_circle</i></button>
+								<button class="btn btn-secondary float-left mr-3" id="btnCancelAddress" type="button" data-dismiss="modal" name="prevBtn">Cancel <i class="material-icons">cancel</i></button>
+								<button class="btn btn-orange" id="btnsubmitAddress" type="submit" data-target="#demo" data-toggle="collapse" name="nextBtn">Submit <i class="material-icons">check_circle</i></button>
 							</div>
 						</div>
 				}
@@ -112,6 +112,7 @@
 					}, 2000);
 					return;
 				}
+				else
 				toastr.error(response.Message, "Change Address");
 			}
 			$("#btnsubmit").prop("disabled", false);
