--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/_ChangePassword.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/_ChangePassword.cshtml
@@ -14,7 +14,7 @@
 					@Html.AntiForgeryToken()
 				<h5 class="modal-title">Change Password</h5>
 				<div class="row">
-					@Html.HiddenFor(m => m.Email, new { id = "uEmail" })
+					@Html.HiddenFor(m => m.Email, new { id = "passwordEmail" })
 					<div class="col-md-12">
 						@Html.LabelFor(m => m.OldPassword, new { @class = "requiredA" })
 						@Html.TextBoxFor(m => m.OldPassword, new { @class = "form-control", @Name = "OldPassword", @type = "password" })
