--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/_ChangePhone.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/_ChangePhone.cshtml
@@ -14,7 +14,7 @@
 					@Html.AntiForgeryToken()
 					<h5 class="modal-title">Change Phone Number</h5>
 					<div class="row">
-						@Html.HiddenFor(m => m.Email, new { id = "uEmail" })
+						@Html.HiddenFor(m => m.Email, new { id = "pEmail" })
 						<div class="col-md-12">
 							@Html.LabelFor(m => m.OldPhone, new { @class = "requiredA" })
 							@Html.TextBoxFor(m => m.OldPhone, new { @class = "form-control", @Name = "OldPhone" })
@@ -24,8 +24,8 @@
 										
 					<div class="row">
 						<div class="col-md-12">
-							<button class="btn btn-secondary float-left mr-3" id="btnCancel" type="button" data-dismiss="modal" name="prevBtn">Cancel <i class="material-icons">cancel</i></button>
-							<button class="btn btn-orange" id="btnsubmit" type="submit" data-target="#demo" data-toggle="collapse" name="nextBtn">Submit <i class="material-icons">check_circle</i></button>
+							<button class="btn btn-secondary float-left mr-3" id="btnCancelPhone" type="button" data-dismiss="modal" name="prevBtn">Cancel <i class="material-icons">cancel</i></button>
+							<button class="btn btn-orange" id="btnsubmitPhone" type="submit" data-target="#demo" data-toggle="collapse" name="nextBtn">Submit <i class="material-icons">check_circle</i></button>
 						</div>
 					</div>
 				}
