jquery validation added for comparing old and new password. BAL updated with update of phone, email, address and password methods

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/_ChangePassword.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/_ChangePassword.cshtml
@@ -9,7 +9,8 @@
 							OnSuccess = "OnSuccess",
 							OnFailure = "OnFailure",
 							OnBegin = "OnBegin"
-						}))
+						},
+						new { id = "changePassword" }))
 				{
 					@Html.AntiForgeryToken()
 				<h5 class="modal-title">Change Password</h5>
@@ -24,7 +25,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						@Html.LabelFor(m => m.NewPassword, new { @class = "requiredA" })
-						@Html.TextBoxFor(m => m.NewPassword, new { @class = "form-control", @Name = "NewPassword", @type = "password" })
+						@Html.TextBoxFor(m => m.NewPassword, new { @class = "form-control", @Name = "NewPassword", @type = "password", @notEqualTo = "#OldPassword" })
 						@Html.ValidationMessageFor(m => m.NewPassword)
 					</div>
 				</div>
@@ -48,6 +49,12 @@
 	</div>
 <script>
 	$(document).ready(function () {
+		$.validator.addMethod("notEqualTo", function (value, element, param) {
+			var target = $(param);
+			if (value) return value != target.val();
+			else return this.optional(element);
+		}, "can't match with Old Password!");
+		
 		function OnSuccess(response) {
 			if (typeof (response.Message) !== 'undefined') {
 				if (response.IsSuccess) {
