--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/_ChangePassword.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/_ChangePassword.cshtml
@@ -6,7 +6,7 @@
 				@using (Ajax.BeginForm("ChangePassword", "Account", FormMethod.Post,
 						new AjaxOptions
 						{
-							OnSuccess = "OnSuccess",
+							OnSuccess = "OnSuccessChangePassword",
 							OnFailure = "OnFailure",
 							OnBegin = "OnBegin"
 						},
@@ -54,20 +54,18 @@
 			if (value) return value != target.val();
 			else return this.optional(element);
 		}, "can't match with Old Password!");
-		
-		function OnSuccess(response) {
-			if (typeof (response.Message) !== 'undefined') {
-				if (response.IsSuccess) {
-					toastr.success(response.Message, "Change Password", { timeOut: 3000 });
-					setTimeout(function () {
-						window.location.reload();
-					}, 2000);
-					return;
-				}
-				toastr.error(response.Message, "Change Password");
-			}
-			$("#btnsubmit").prop("disabled", false);
-			$("#btnCancel").prop("disabled", false);
-		}
 	});
+
+	function OnSuccessChangePassword(response) {
+		if (typeof (response.Message) !== 'undefined') {
+			if (response.IsSuccess) {
+				toastr.success(response.Message, "Change Password", { timeOut: 3000 });
+				$('#changePassword').modal('hide');
+				return;
+			}
+			toastr.error(response.Message, "Change Password");
+		}
+		$("#btnsubmit").prop("disabled", false);
+		$("#btnCancel").prop("disabled", false);
+	}
 </script>
