--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/_ChangePhone.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/_ChangePhone.cshtml
@@ -6,7 +6,7 @@
 				@using (Ajax.BeginForm("ChangePhone", "Account", FormMethod.Post,
 						new AjaxOptions
 						{
-							OnSuccess = "OnSuccess",
+							OnSuccess = "OnSuccessChangePhone",
 							OnFailure = "OnFailure",
 							OnBegin = "OnBegin"
 						}))
@@ -16,9 +16,10 @@
 					<div class="row">
 						@Html.HiddenFor(m => m.Email, new { id = "pEmail" })
 						<div class="col-md-12">
-							@Html.LabelFor(m => m.OldPhone, new { @class = "requiredA" })
+							@Html.LabelFor(m => m.OldPhone, new { @class = "requiredA", @Id = "PhoneValue" })
 							@Html.TextBoxFor(m => m.OldPhone, new { @class = "form-control", @Name = "OldPhone" })
 							@Html.ValidationMessageFor(m => m.OldPhone)
+							
 						</div>
 					</div>
 										
@@ -34,22 +35,22 @@
 	</div>
 </div>
 <script>
-	$(document).ready(function () {
-		function OnSuccess(response) {
-			if (typeof (response.Message) !== 'undefined') {
-				if (response.IsSuccess) {
-					toastr.success(response.Message, "Change Phone", { timeOut: 3000 });
-					setTimeout(function () {
-						window.location.reload();
-					}, 2000);
-					return;
-				}
-				toastr.error(response.Message, "Change Phone");
+	
+	function OnSuccessChangePhone(response) {
+		if (typeof (response.Message) !== 'undefined') {
+			if (response.IsSuccess) {
+				toastr.success(response.Message, "Change Phone", { timeOut: 3000 });
+				$('#changePhone').modal('hide');
+				setTimeout(function () {
+					window.location.reload();
+				}, 2000);
+				return;
 			}
-			$("#btnsubmit").prop("disabled", false);
-			$("#btnCancel").prop("disabled", false);
+			toastr.error(response.Message, "Change Phone");
 		}
-	});
+		$("#btnsubmit").prop("disabled", false);
+		$("#btnCancel").prop("disabled", false);
+	}
 </script>
 
 
