--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangeAddress.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangeAddress.cshtml
@@ -4,7 +4,7 @@
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-body">
-				@using (Ajax.BeginForm("ChangeAddress", "Account", FormMethod.Post,
+				@using (Ajax.BeginForm("ChangeAddress", "Common", FormMethod.Post,
 						new AjaxOptions
 						{
 							OnSuccess = "OnSuccessChangeAddress",
@@ -70,7 +70,7 @@
 
 			if (selectedCountry == 231 && selectedState == "") {
 				var id = 231;
-				$.get("FillState", { Id: id }, function (data) {
+				$.get("/Account/FillState", { Id: id }, function (data) {
 					var v = "<option>Select State</option>";
 					$.each(data, function (i, v1) {
 						v += "<option value=" + v1.Id + ">" + v1.Name + "</option>";
@@ -82,7 +82,7 @@
 			$("#Country").change(function () {
 				var id = $(this).val();
 				$("#State").empty();
-				$.get("FillState", { Id: id }, function (data) {
+				$.get("/Account/FillState", { Id: id }, function (data) {
 					var v = "<option>Select State</option>";
 					$.each(data, function (i, v1) {
 						v += "<option value=" + v1.Id + ">" + v1.Name + "</option>";
@@ -94,7 +94,7 @@
 			var selectedState = "@ViewBag.SelectedState";
 			if (selectedState != "") {
 				$("#State").empty();
-				$.get("FillState", { Id: selectedCountry }, function (data) {
+				$.get("/Account/FillState", { Id: selectedCountry }, function (data) {
 					var v = "";
 					$.each(data, function (i, v1) {
 						if (v1.Id == selectedState)
