--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangePhone.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangePhone.cshtml
@@ -3,7 +3,7 @@
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-body">
-				@using (Ajax.BeginForm("ChangePhone", "Account", FormMethod.Post,
+				@using (Ajax.BeginForm("ChangePhone", "Common", FormMethod.Post,
 						new AjaxOptions
 						{
 							OnSuccess = "OnSuccessChangePhone",
