--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangeEmail.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangeEmail.cshtml
@@ -3,7 +3,7 @@
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-body">
-				@using (Ajax.BeginForm("ChangeEmail", "Account", FormMethod.Post,
+				@using (Ajax.BeginForm("ChangeEmail", "Common", FormMethod.Post,
 						new AjaxOptions
 						{
 							OnSuccess = "OnSuccessChangeEmail",
