--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangeAddress.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangeAddress.cshtml
@@ -66,44 +66,36 @@
 
 	$(document).ready(function () {
 		var selectedCountry = "@ViewBag.SelectedCountry";
-			var selectedState = "@ViewBag.SelectedState";
+		var selectedState = "@ViewBag.SelectedState";
 
-			if (selectedCountry == 231 && selectedState == "") {
-				var id = 231;
-				$.get("/Account/FillState", { Id: id }, function (data) {
-					var v = "<option>Select State</option>";
-					$.each(data, function (i, v1) {
-						v += "<option value=" + v1.Id + ">" + v1.Name + "</option>";
-					});
-					$("#State").html(v);
-				});
-			}
+		if (selectedCountry == 231 && selectedState == "") {
+			var id = 231;
+			bindCities(id);
+		}
 
-			$("#Country").change(function () {
-				var id = $(this).val();
-				$("#State").empty();
-				$.get("/Account/FillState", { Id: id }, function (data) {
-					var v = "<option>Select State</option>";
-					$.each(data, function (i, v1) {
-						v += "<option value=" + v1.Id + ">" + v1.Name + "</option>";
-					});
-					$("#State").html(v);
-				});
-			});
+		$("#Country").change(function () {
+			var id = $(this).val();
+			$("#State").empty();
+			bindCities(id);
+		});
 
-			var selectedState = "@ViewBag.SelectedState";
-			if (selectedState != "") {
-				$("#State").empty();
-				$.get("/Account/FillState", { Id: selectedCountry }, function (data) {
-					var v = "";
-					$.each(data, function (i, v1) {
-						if (v1.Id == selectedState)
-							v += "<option value=" + v1.Id + ">" + v1.Name + "</option>";
-					});
-					$("#State").html(v);
-				});
-			}
+		var selectedState = "@ViewBag.SelectedState";
+		if (selectedState != "") {
+			$("#State").empty();
+			bindCities(selectedCountry);
+		}
 	});
+
+    function bindCities(id) {
+        $.get("/Account/FillState", { Id: id }, function (data) {
+            var v = "";
+            $.each(data, function (i, v1) {
+                if (v1.Id == selectedState)
+                    v += "<option value=" + v1.Id + ">" + v1.Name + "</option>";
+            });
+            $("#State").html(v);
+        });
+    }
 
 	function OnSuccessChangeAddress(response) {
 		if (typeof (response.Message) !== 'undefined') {
