--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Event/Event.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Event/Event.cshtml
@@ -250,6 +250,11 @@
 		})
 
 		$(document).ready(function () {
+			$("#programEventRegistration").hide();
+			$("#MyAccount").hide();
+			$("#userList").show();
+			$("#cart").hide();
+
 			var today = new Date();
 			$('.datepicker').datepicker({
 				todayHighlight: true,
