--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_Layout.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_Layout.cshtml
@@ -37,17 +37,17 @@
 							<li class="nav-item"> <a class="nav-link" href="#">About Us</a> </li>
 							<li class="nav-item"> <a class="nav-link" href="#">Donate</a> </li>
 							<li class="nav-item"> @Html.ActionLink("Program/Event Registration", "ProgramEventRegistration", new { controller = "EventRegistration" }, new { @class = "nav-link", @id = "programEventRegistration" }) </li>
-							<li class="nav-item"> @Html.ActionLink("UserList", "Index", new { controller = "Admin" }, new { @class = "nav-link", @id = "userList" }) </li>
+							<li class="nav-item"> @Html.ActionLink("Users", "Index", new { controller = "Admin" }, new { @class = "nav-link", @id = "userList" }) </li>
 							<li class="nav-item"> @Html.ActionLink("Current Events", "Event", new { controller = "Event" }, new { @class = "nav-link", @id = "current-Events" })</li>
 							<li class="nav-item"> <a class="nav-link" href="#">Contact Us</a> </li>
 						</ul>
 						<div class="form-inline my-2 my-lg-0">
 							<span class="navbar-text">Welcome, @ViewBag.Fullname</span>
 							<ul class="navbar-nav mr-auto">
-								<li class="nav-item"> @Html.ActionLink("My Account", "MyAccount", new { controller = "Account" }, new { @class = "nav-link" })</li>
+								<li class="nav-item"> @Html.ActionLink("My Account", "MyAccount", new { controller = "Account" }, new { @class = "nav-link", @id = "MyAccount" })</li>
 								<li class="nav-item"> @Html.ActionLink("Sign Out", "LogOff", new { controller = "Account" }, new { @class = "nav-link" }) </li>
 							</ul>
-							<a href="#"><img src="~/Content/img/cart-icon.png"> <span class="cart-count">2</span></a>
+							<a id="cart" href="#"><img src="~/Content/img/cart-icon.png"> <span class="cart-count">2</span></a>
 						</div>
 					</div>
 				</nav>
