--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangeEmail.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangeEmail.cshtml
@@ -6,9 +6,7 @@
 				@using (Ajax.BeginForm("ChangeEmail", "Common", FormMethod.Post,
 						new AjaxOptions
 						{
-							OnSuccess = "OnSuccessChangeEmail",
-							OnFailure = "OnFailure",
-							OnBegin = "OnBegin"
+							OnSuccess = "OnSuccessChangeEmail"
 						}))
 				{
 					@Html.AntiForgeryToken()
