--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangePassword.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangePassword.cshtml
@@ -6,9 +6,7 @@
 				@using (Ajax.BeginForm("ChangePassword", "Common", FormMethod.Post,
 						new AjaxOptions
 						{
-							OnSuccess = "OnSuccessChangePassword",
-							OnFailure = "OnFailure",
-							OnBegin = "OnBegin"
+							OnSuccess = "OnSuccessChangePassword"
 						},
 						new { id = "changePassword" }))
 				{
@@ -38,8 +36,8 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12">
-						<button class="btn btn-secondary float-left mr-3" id="btnCancelPassword" type="button" data-dismiss="modal" name="prevBtn">Cancel <i class="material-icons">cancel</i></button>
-						<button class="btn btn-orange" id="btnsubmitPassword" type="submit" data-target="#demo" data-toggle="collapse" name="nextBtn">Submit <i class="material-icons">check_circle</i></button>
+						<button class="btn btn-secondary float-left mr-3" id="btnCancel" type="button" data-dismiss="modal" name="prevBtn">Cancel <i class="material-icons">cancel</i></button>
+						<button class="btn btn-orange" id="btnsubmit" type="submit" data-target="#demo" data-toggle="collapse" name="nextBtn">Submit <i class="material-icons">check_circle</i></button>
 					</div>
 				</div>
 				}
