--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangePassword.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Common/_ChangePassword.cshtml
@@ -17,21 +17,21 @@
 					<div class="col-md-12">
 						@Html.LabelFor(m => m.OldPassword, new { @class = "requiredA" })
 						@Html.TextBoxFor(m => m.OldPassword, new { @class = "form-control", @Name = "OldPassword", @type = "password" })
-						@Html.ValidationMessageFor(m => m.OldPassword)
+						@Html.ValidationMessageFor(m => m.OldPassword, "", new { @class = "text-danger" })
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-12">
 						@Html.LabelFor(m => m.NewPassword, new { @class = "requiredA" })
 						@Html.TextBoxFor(m => m.NewPassword, new { @class = "form-control", @Name = "NewPassword", @type = "password", @notEqualTo = "#OldPassword" })
-						@Html.ValidationMessageFor(m => m.NewPassword)
+						@Html.ValidationMessageFor(m => m.NewPassword, "", new { @class = "text-danger" })
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-12">
 						@Html.LabelFor(m => m.RetypePassword, new { @class = "requiredA" })
 						@Html.TextBoxFor(m => m.RetypePassword, new { @class = "form-control", @Name = "RetypePassword", @type = "password" })
-						@Html.ValidationMessageFor(m => m.RetypePassword)
+						@Html.ValidationMessageFor(m => m.RetypePassword, "", new { @class = "text-danger" })
 					</div>
 				</div>
 				<div class="row">
